--- a/index.html
+++ b/index.html
@@ -791,6 +791,8 @@
         player.canJump = true;
         cat.x = 400;
         cat.y = 590;
+        checkpoint.x = 600;
+        checkpoint.y = 900;
         cat.velocityX = 2; 
         cat.direction = 1;
         cat.frame = 0;
